tests/error/int2char_index.src
.IPPcode18
defvar GF@a
defvar GF@b
int2char GF@a int@-1